adjusted a lot of javascript for smooth scrolling, changed it back to headings being cutoff if order to correct background color issues

--- a/main.css
+++ b/main.css
@@ -1,11 +1,6 @@
 body {
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.wrap {
-  height: 100%;
-  overflow: auto;
+  margin-top: 50px;
+  padding-bottom: 35px;
 }
 
 .jumbotron{
@@ -13,26 +8,23 @@ body {
 }
 
 #welcome {
-  background-color: #91e1e2;
   margin-bottom:0;
   padding-bottom: 20px;
 }
 
 #patients {
-  padding-top: 50px;
-  margin-top: -50px;
-  margin-bottom:0;
+  background-color: #91e1e2;
+  padding-bottom: 20px;
 }
 
 #clinicians {
-  padding-top: 50px;
-  margin-top: -50px;
-  margin-bottom:0;
+  background-color: #FFFFFF;
+  padding-bottom: 20px;
 }
 
 #about {
-  padding-top: 50px;
-  margin-top: -50px;
+  background-color: #91e1e2;
+  padding-bottom: 20px;
 }
 
 .back-to-top {
@@ -48,11 +40,47 @@ body {
 }
 
 .img-circle {
-    border-radius: 50%;
+  border-radius: 50%;
 }
 
 .center-block {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
- }
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hovereffect {
+  text-align: center;
+}
+
+.hovereffect .overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 40%;
+  left: -0.1%;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.hovereffect p.info {
+  display: inline-block;
+  padding: 7px 14px;
+  text-transform: uppercase;
+  color: #fff;
+  border: 1px solid #fff;
+  background-color: #000;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  margin: 7px;
+}
+
+.hovereffect:hover p.info {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
